--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 # See README.md for guidance.
 #-------------------------------------------------------------------------
 
-cmake_minimum_required ( VERSION 3.8 )
+cmake_minimum_required ( VERSION 3.11 )
 
 project ( RTWeekend
   VERSION 2.95.0
@@ -22,6 +22,7 @@ if(CMAKE_CUDA_COMPILER)
     set(CMAKE_CUDA_STANDARD 11)
     set(CMAKE_CUDA_STANDARD_REQUIRED ON)
   endif()
+  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 else()
   message(STATUS "No CUDA support")
 endif()
