--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ set ( SOURCE_ONE_WEEKEND_CUDA
   ${COMMON_ALL_CUDA}
   src/InOneWeekendCuda/hittable.h
   src/InOneWeekendCuda/hittable_list.h
-  # src/InOneWeekendCuda/material.h
+  src/InOneWeekendCuda/material.h
   src/InOneWeekendCuda/sphere.h
   src/InOneWeekendCuda/main.cu
 )
