--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,11 @@ cmake_minimum_required ( VERSION 3.11 )
 
 project ( RTWeekend
   VERSION 2.95.0
-  LANGUAGES CXX
-)
+  )
 
-set(OptiX_INSTALL_DIR
-  "/usr/local/nvidia/NVIDIA-OptiX-SDK-6.5.0-linux64/"
+# set to match your path
+set(OptiX_INSTALL_DIR "/usr/local/nvidia/NVIDIA-OptiX-SDK-6.5.0-linux64/"
   CACHE PATH "Path to OptiX installed location.")
-
 
 # Set to c++11
 set ( CMAKE_CXX_STANDARD 11 )
@@ -27,11 +25,36 @@ if(CMAKE_CUDA_COMPILER)
     set(CMAKE_CUDA_STANDARD 11)
     set(CMAKE_CUDA_STANDARD_REQUIRED ON)
   endif()
-  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+  #set(CMAKE_CUDA_SEPARABLE_COMPILATION ON) # for multi-target pre-compilations
+
+  # Defines OptiX utilities and variables
   INCLUDE(cmake/configure_optix.cmake)
 else()
   message(STATUS "No CUDA support")
 endif()
+
+# if(NOT SET_UP_CONFIGURATIONS_DONE)
+#   set(SET_UP_CONFIGURATIONS_DONE 1)
+
+#   # No reason to set CMAKE_CONFIGURATION_TYPES if it's not a multiconfig generator
+#   # Also no reason mess with CMAKE_BUILD_TYPE if it's a multiconfig generator.
+#   if(CMAKE_CONFIGURATION_TYPES) # multiconfig generator?
+#     set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Profile" CACHE STRING "" FORCE)
+#   else()
+#     if(NOT CMAKE_BUILD_TYPE)
+#       #            message("Defaulting to release build.")
+#       set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
+#     endif()
+#     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY HELPSTRING "Choose the type of build")
+#     # set the valid options for cmake-gui drop-down list
+#     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug;Release;Profile")
+#   endif()
+# endif()
+# MARK_AS_ADVANCED(CUDA_SDK_ROOT_DIR)
+
+# SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+# SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 # Source
 set ( COMMON_ALL
@@ -124,22 +147,6 @@ set ( SOURCE_NEXT_WEEK_CUDA
   src/TheNextWeekCuda/main.cu
 )
 
-set ( COMMON_ALL_OPTIX
-  src/commonOptix/rtweekend.cuh
-  src/commonOptix/camera.cuh
-  src/commonOptix/ray.cuh
-  src/commonOptix/vec3.cuh
-)
-
-set ( SOURCE_ONE_WEEKEND_OPTIX
-  ${COMMON_ALL_OPTIX}
-  src/InOneWeekendOptix/hittable.cuh
-  src/InOneWeekendOptix/hittable_list.cuh
-  src/InOneWeekendOptix/material.cuh
-  src/InOneWeekendOptix/sphere.cuh
-  src/InOneWeekendOptix/main.cu
-)
-
 
 # Executables
 add_executable(inOneWeekend ${SOURCE_ONE_WEEKEND})
@@ -147,8 +154,6 @@ add_executable(theNextWeek  ${SOURCE_NEXT_WEEK})
 add_executable(restOfLife   ${SOURCE_REST_OF_LIFE})
 add_executable(inOneWeekendCuda  ${SOURCE_ONE_WEEKEND_CUDA})
 add_executable(theNextWeekCuda   ${SOURCE_NEXT_WEEK_CUDA})
-add_executable(inOneWeekendOptix ${SOURCE_ONE_WEEKEND_OPTIX})
-#add_executable(theNextWeekOptix  ${SOURCE_NEXT_WEEK_OPTIX})
 
 target_include_directories(inOneWeekend PRIVATE src)
 target_include_directories(theNextWeek  PRIVATE src)
@@ -157,19 +162,5 @@ target_include_directories(restOfLife   PRIVATE src)
 target_include_directories(inOneWeekendCuda PRIVATE src)
 target_include_directories(theNextWeekCuda  PRIVATE src)
 
-target_include_directories(inOneWeekendOptix PRIVATE src)
-#target_include_directories(theNextWeekOptix  PRIVATE src)
-
-
-# add_executable(cos_cubed         src/RestOfLife/cos_cubed.cc         ${COMMON_ALL})
-# add_executable(cos_density       src/RestOfLife/cos_density.cc       ${COMMON_ALL})
-# add_executable(integrate_x_sq    src/RestOfLife/integrate_x_sq.cc    ${COMMON_ALL})
-# add_executable(pi                src/RestOfLife/pi.cc                ${COMMON_ALL})
-# add_executable(sphere_importance src/RestOfLife/sphere_importance.cc ${COMMON_ALL})
-# add_executable(sphere_plot       src/RestOfLife/sphere_plot.cc       ${COMMON_ALL})
-# target_include_directories(cos_cubed         PRIVATE src)
-# target_include_directories(cos_density       PRIVATE src)
-# target_include_directories(integrate_x_sq    PRIVATE src)
-# target_include_directories(pi                PRIVATE src)
-# target_include_directories(sphere_importance PRIVATE src)
-# target_include_directories(sphere_plot       PRIVATE src)
+# Handled within each
+ADD_SUBDIRECTORY( src/OptiX/InOneWeekend )
