reorganizing directory structure
unfortunately segfaults with error

❯ build/inOneWeekendOptix > output/abc.ppm
terminate called after throwing an instance of 'optix::Exception'
  what():  Variable not found (Details: Function "RTresult _rtContextValidate(RTcontext)" caught exception: Variable "Unresolved reference to variable world from _Z13rayGenProgramv" not found in scope)
[1]    8373 abort (core dumped)  build/inOneWeekendOptix > output/abc.ppm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,9 @@ endif()
 # endif()
 # MARK_AS_ADVANCED(CUDA_SDK_ROOT_DIR)
 
-# SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-# SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 # Source
 set ( COMMON_ALL
