--- a/src/OptiX/InOneWeekend/CMakeLists.txt
+++ b/src/OptiX/InOneWeekend/CMakeLists.txt
@@ -1,25 +1,7 @@
 INCLUDE_DIRECTORIES(.)
 
-
 cuda_compile_and_embed(  drawColor_ptx_c         basics/drawColor.cu  )
 cuda_compile_and_embed(  drawColorGradient_ptx_c basics/drawColorGradient.cu   )
-
-cuda_compile_and_embed(
-  raygen_ptx_c raygen.cu
-  )
-
-cuda_compile_and_embed(
-  miss_ptx_c miss.cu
-  )
-
-cuda_compile_and_embed(
-  sphere_ptx_c sphere.cu
-  )
-
-cuda_compile_and_embed(
-  material_ptx_c material.cu
-)
-
 add_executable(basics_drawColor
   basics/main.cpp
   # Compiled cuda ptx programs
@@ -31,8 +13,30 @@ add_executable(basics_drawColorGradient
   # Compiled cuda ptx programs
   ${drawColorGradient_ptx_c}
   )
+target_link_libraries(basics_drawColor          ${optix_LIBRARY})
+target_link_libraries(basics_drawColorGradient  ${optix_LIBRARY})
+
+
+cuda_compile_and_embed(
+  raygen_ptx_c   raygen/raygen.cu
+  )
+
+cuda_compile_and_embed(
+  miss_ptx_c     miss/miss.cu
+  )
+
+cuda_compile_and_embed(
+  sphere_ptx_c   geometry/sphere.cu
+  )
+
+cuda_compile_and_embed(
+  material_ptx_c material/material.cu
+  )
+
 
 add_executable(inOneWeekendOptix
+  introOptix.h
+  introOptix.cpp
   main.cpp
   # Compiled cuda ptx programs
   ${raygen_ptx_c}
@@ -41,7 +45,5 @@ add_executable(inOneWeekendOptix
   ${material_ptx_c}
   )
 
-target_link_libraries(basics_drawColor          ${optix_LIBRARY})
-target_link_libraries(basics_drawColorGradient  ${optix_LIBRARY})
 
 target_link_libraries(inOneWeekendOptix  ${optix_LIBRARY})
