cmake generate now succeeds on platform without CUDA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,9 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 # Handled within each
 ADD_SUBDIRECTORY( src/Cpp )
-ADD_SUBDIRECTORY( src/Cuda )
 
-ADD_SUBDIRECTORY( src/OptiX/InOneWeekend )
-ADD_SUBDIRECTORY( src/OptiX/TheNextWeek )
+if(CMAKE_CUDA_COMPILER)   # Only if CUDA is available
+  ADD_SUBDIRECTORY( src/Cuda )
+  ADD_SUBDIRECTORY( src/OptiX/InOneWeekend )
+  ADD_SUBDIRECTORY( src/OptiX/TheNextWeek )
+endif()
