diffuse light and aarect scene

--- a/src/OptiX/TheNextWeek/CMakeLists.txt
+++ b/src/OptiX/TheNextWeek/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(theNextWeekOptix
   ${miss_ptx_c}
   ${sphere_ptx_c}
   ${moving_sphere_ptx_c}
+  ${aarect_ptx_c}
   ${normal_material_ptx_c}
   ${lambertian_material_ptx_c}
   ${metal_material_ptx_c}
