untested: add volumeBox code

--- a/src/OptiX/TheNextWeek/CMakeLists.txt
+++ b/src/OptiX/TheNextWeek/CMakeLists.txt
@@ -21,6 +21,10 @@ cuda_compile_and_embed(
   )
 
 cuda_compile_and_embed(
+  volume_box_ptx_c      geometry/volumeBox.cu
+  )
+
+cuda_compile_and_embed(
   normal_material_ptx_c     material/normalMaterial.cu
   )
 
@@ -72,15 +76,20 @@ add_executable(theNextWeekOptix
   # Compiled cuda ptx programs
   ${raygen_ptx_c}
   ${miss_ptx_c}
+
   ${sphere_ptx_c}
   ${moving_sphere_ptx_c}
   ${aarect_ptx_c}
-  ${aabox_ptx_c}
+  ${volume_box_ptx_c}
+  ${volume_sphere_ptx_c}
+
   ${normal_material_ptx_c}
   ${lambertian_material_ptx_c}
   ${metal_material_ptx_c}
   ${dielectric_material_ptx_c}
   ${diffuse_light_material_ptx_c}
+  ${isotropic_material_ptx_c}
+
   ${null_texture_ptx_c}
   ${constant_texture_ptx_c}
   ${checkered_texture_ptx_c}
