seed RestOfLife by copying over TheNextWeek

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,4 +63,5 @@ if(CMAKE_CUDA_COMPILER)   # Only if CUDA is available
   ADD_SUBDIRECTORY( Cuda )
   ADD_SUBDIRECTORY( OptiX/InOneWeekend )
   ADD_SUBDIRECTORY( OptiX/TheNextWeek )
+  ADD_SUBDIRECTORY( OptiX/RestOfLife )
 endif()
