add biased mixture PDF; got rid of clamp in raygen
(so susceptible to "fireflies")

--- a/src/OptiX/RestOfLife/CMakeLists.txt
+++ b/src/OptiX/RestOfLife/CMakeLists.txt
@@ -74,7 +74,8 @@ cuda_compile_and_embed(
 
 cuda_compile_and_embed( cosine_pdf_ptx_c  pdf/cosinePdf.cu )
 cuda_compile_and_embed( rect_pdf_ptx_c    pdf/rectPdf.cu )
-cuda_compile_and_embed( mixture_pdf_ptx_c pdf/mixturePdf.cu )
+cuda_compile_and_embed( mixture_pdf_ptx_c      pdf/mixturePdf.cu )
+cuda_compile_and_embed( mixture_bias_pdf_ptx_c pdf/mixtureBiasPdf.cu )
 
 add_executable(restOfLifeOptix
   Director.h
@@ -93,6 +94,7 @@ add_executable(restOfLifeOptix
   ${cosine_pdf_ptx_c}
   ${rect_pdf_ptx_c}
   ${mixture_pdf_ptx_c}
+  ${mixture_bias_pdf_ptx_c}
 
   ${normal_material_ptx_c}
   ${lambertian_material_ptx_c}
