--- a/src/OptiX/OptixGui/CMakeLists.txt
+++ b/src/OptiX/OptixGui/CMakeLists.txt
@@ -1,3 +1,33 @@
+cmake_minimum_required ( VERSION 3.11 )
+
+project ( OptixGui
+  VERSION 0.1.0
+  )
+
+# set to match your path
+set(OptiX_INSTALL_DIR "/usr/local/nvidia/NVIDIA-OptiX-SDK-6.5.0-linux64/"
+  CACHE PATH "Path to OptiX installed location.")
+
+# Set to c++11
+set ( CMAKE_CXX_STANDARD 11 )
+
+include(CheckLanguage)
+check_language(CUDA)
+if(CMAKE_CUDA_COMPILER)
+  enable_language(CUDA)
+  if(NOT DEFINED CMAKE_CUDA_STANDARD)
+    set(CMAKE_CUDA_STANDARD 11)
+    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+  endif()
+  #set(CMAKE_CUDA_SEPARABLE_COMPILATION ON) # for multi-target pre-compilations
+
+  # Defines OptiX utilities and variables
+  INCLUDE(../../CMake/configure_optix.cmake)
+else()
+  message(STATUS "No CUDA support")
+endif()
+
+
 INCLUDE_DIRECTORIES(.)
 
 cuda_compile_and_embed( raygen_ptx_c   raygen/raygen.cu )
