move start on OptixGui to its own repo
 -> https://github.com/idcrook/tweeker_raytracer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,6 +64,6 @@ if(CMAKE_CUDA_COMPILER)   # Only if CUDA is available
   ADD_SUBDIRECTORY( OptiX/InOneWeekend )
   ADD_SUBDIRECTORY( OptiX/TheNextWeek )
   ADD_SUBDIRECTORY( OptiX/RestOfLife )
-  # decouple from toplevel for now #   ADD_SUBDIRECTORY( OptiX/OptixGui )
-  # see src/OptiX/OptixGui/README.md
+  # moved to own repo #   ADD_SUBDIRECTORY( OptiX/OptixGui )
+  # see https://github.com/idcrook/tweeker_raytracer
 endif()
